Fix JAXB-free XER UUID decoding